fix(button.css): alignment infinite logo with header buttons
#7

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -5,6 +5,7 @@
   display: inline-block;
   font-family: 'Space Grotesk';
   margin: 10px;
+  margin-top: 0px;
   padding: 15px;
   width: fit-content;
 }
